# templates

./: license.md  meta.json  readme.md
default/: licence.md  meta.json  readme.md
golang/: .travis.yml  meta.json
helm/: Chart.yaml  meta.json  values.schema.json
python/: meta.json  setup.py
react/: meta.json
rust/: Cargo.toml  meta.json
test/: meta.json
typescript/: .eslintignore  .eslintrc.js  gulpfile.js  meta.json  package.json
typescript/scripts/: build.sh  deploy.sh  test.sh
wasm/: Cargo.toml  meta.json
