[package]
name = "{{name}}"
version = "0.1.0"
authors = ["{{username}} <{{email}}>"]
edition = "2018"
repository = "{{repository}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.67", features = ["serde-serialize"] }
# for complex data types to/from jsValue
serde = { version = "1.0.115", features = ["derive"] }
num = "0.3.0"

[profile.release]
debug = true
